<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraActivity">

   <androidx.camera.view.PreviewView
       android:id="@+id/viewFinder"
       android:layout_width="match_parent"
       android:layout_height="match_parent" />

   <ImageView
       android:id="@+id/captureImage"
       android:layout_width="60dp"
       android:layout_height="60dp"
       android:layout_marginBottom="16dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:contentDescription="@string/camera"
       app:srcCompat="@drawable/ic_capture" />

   <ImageView
       android:contentDescription="@string/switch_camera"
       android:id="@+id/switchCamera"
       android:layout_width="40dp"
       android:layout_height="40dp"
       android:layout_marginTop="16dp"
       android:layout_marginEnd="16dp"
       app:layout_constraintEnd_toEndOf="@+id/viewFinder"
       app:layout_constraintTop_toTopOf="parent"
       app:srcCompat="@drawable/ic_switch_camera" />

   <ProgressBar
       android:id="@+id/pBar"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>