<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BackgroundAuth"
    tools:context=".ui.auth.LoginActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login"
        android:textSize="30sp"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:alpha="0"
        tools:alpha="1"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/please_sign_in_to_continue"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="20sp"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
<com.andi.storyapp.ui.customui.EmailEditText
        android:alpha="0"
        tools:alpha="1"
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/stroke_round5_grey"
        android:paddingStart="5dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="RtlSymmetry" />

    <com.andi.storyapp.ui.customui.PasswordEditText
        android:alpha="0"
        tools:alpha="1"
        android:id="@+id/etPwd"
        android:paddingStart="5dp"
        android:inputType="textPassword"
        android:background="@drawable/stroke_round5_grey"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:alpha="0"
        tools:alpha="1"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/etEmail" />

    <TextView
        android:alpha="0"
        tools:alpha="1"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/etPwd"
        app:layout_constraintStart_toStartOf="@+id/etPwd" />

    <Button
        android:alpha="0"
        tools:alpha="1"
        android:textColor="@color/white"
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/sign_in"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
        android:background="@drawable/bg_yellow_round"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPwd" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/toRegister"
            app:layout_constraintTop_toTopOf="@+id/toRegister" />

        <TextView
            android:id="@+id/toRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/to_sign_up"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/textView5"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>



</androidx.constraintlayout.widget.ConstraintLayout>